--- a/.reek.yml
+++ b/.reek.yml
@@ -84,6 +84,7 @@ detectors:
       - Analytics
   TooManyInstanceVariables:
     exclude:
+      - BaseFlow
       - OpenidConnectAuthorizeForm
       - OpenidConnectRedirector
       - Idv::VendorResult
